[Steph] Training Q-matrices

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,13 +48,13 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-#add_message_files(
-#    FILES
-#    QLearningReward.msg
-#    QMatrix.msg
-#    QMatrixRow.msg
-#    RobotMoveDBToBlock.msg
-#)
+add_message_files(
+    FILES
+    QLearningReward.msg
+    QMatrix.msg
+    QMatrixRow.msg
+    RobotTasksDoors.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
